<resources>
    <string name="app_name">REMI</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="RUMMY">RUMMY</string>
    <string name="start">START</string>
    <string name="card">Card</string>
    <string name="swap">SWAP</string>
    <string name="hello_guys">Hello guys</string>
    <string name="number_of_joker_cards">Number Of Joker Cards:</string>
    <string name="replace">Replace</string>
    <string name="check">Check</string>
    <string name="undo">UNDO</string>
    <string name="mark_unmark">MARK/UNMARK</string>
    <string name="sort">SORT</string>
    <string name="you_won">YOU WON</string>
    <string name="play_again">PLAY AGAIN</string>
    <string-array name="Desired_Number_Of_Joker_Cards">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>

    </string-array>
</resources>